2001-08-27  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Yacc and Lex): Mention lex, not yacc.
	From Alexey Mahotkin.

	* tests/yacc7.test: Use test -f, not test -e.

2001-08-27  Adrian Bunk  <bunk@fs.tum.de>

	* automake.texi (etags): Typo fix.

2001-08-27  Guido Draheim <guidod@gmx.de>

	* automake.in : restrict ansi2knr option to be a filepath

2001-08-23  Tom Tromey  <tromey@redhat.com>

	* configure.in: Upped to 1.5.1a.

2001-08-22  Tom Tromey  <tromey@redhat.com>

	* configure.in: Released 1.5.

	* automake.texi (Conditionals): Mention that conditionals must
	always be invoked.  For PR automake/220.

	* lib/config.guess, lib/config.sub: New versions from FSF.

	* tests/Makefile.am (XFAIL_TESTS): Removed.
	(TESTS): Removed xfail tests.
	* tests/subdir5.test, tests/auxdir2.test, tests/cond17.test:
	Removed.

2001-08-22  Richard Boulton <richard@tartarus.org>
	    Tom Tromey  <tromey@redhat.com>

	* automake.in (lang_yacc_target_hook): Make header file depend on
	.c file, not .y file.
	* lib/am/yacc.am: Non-generic rule changed to depend on %OBJ% (the
	.c file) rather than %SOURCE% (the .y file)  Removed `.y.h' rule.
	* tests/yacc7.test: New file.
	* tests/Makefile.am (TESTS): Added yacc7.test.

2001-08-22  Tim Van Holder  <tim.van.holder@pandora.be>

	* m4/missing.m4: Require AM_AUX_DIR_EXPAND and use $am_aux_dir.

2001-08-18  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Dist): Mention dist-all.

2001-08-11  Tom Tromey  <tromey@redhat.com>

	* configure.in: Upped to version 1.4m.

	* configure.in: Released 1.4l.

	* lib/config.guess, lib/config.sub: New versions from FSF.

2001-08-09  Richard Boulton <richard@tartarus.org>

	* automake.in (handle_single_transform_list): Use new global,
	`%linkers_used', to store the linkers used, rather than an internal
	variable.  Enables correct linker to be calculated across a group
	of calls to &handle_single_transform_list.  Return only list of
	objects, since linker to be used is now externally determined.