@@ -6,8 +6,9 @@ Adam J. Richter		adam@yggdrasil.com
 Adrian Bunk		bunk@fs.tum.de
 Akim Demaille		akim@freefriends.org
 Alex Hornby		alex@anvil.co.uk
-Alexandre Duret-Lutz	duret_g@epita.fr
+Alexander Mai		st002279@hrzpub.tu-darmstadt.de
 Alexander V. Lukyanov	lav@yars.free.net
+Alexandre Duret-Lutz	duret_g@epita.fr
 Alexey Mahotkin		alexm@hsys.msk.ru
 Andreas Schwab		schwab@lamothe.informatik.uni-dortmund.de
 Andrew Cagney		cagney@tpgi.com.au
