@@ -57,6 +57,9 @@ set -e
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
 CC=gcc ./configure
 
 # This is ugly!  If we set U at make time then the "wrong" file gets
