@@ -59,6 +59,10 @@ chmod +x Mycomp
 set -e
 
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 for conf in configure.1 configure.3; do
    cp $conf configure.in
 
