@@ -40,6 +40,11 @@ END
 
 $needs_autoconf
 (gcc -v) > /dev/null 2>&1 || exit 77
+
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 $needs_gnu_make
 
 set -e
