@@ -38,6 +38,11 @@ test "`grep TWO_FALSE Makefile.in | wc -l`" -eq 2 || exit 1
 
 $AUTOCONF || exit 1
 (gcc -v) > /dev/null 2>&1 || exit 77
+
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 $needs_gnu_make
 
 CC='gcc' CONDITION1=true CONDITION2=true ./configure || exit 1
