@@ -34,6 +34,10 @@ $needs_autoconf
 # Likewise for gcc.
 (gcc -v) > /dev/null 2>&1 || exit 77
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 $ACLOCAL || exit 1
 $AUTOMAKE --add-missing || exit 1
 $AUTOCONF || exit 1
