@@ -43,6 +43,10 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 CC='gcc' ./configure --disable-dependency-tracking
 
 $MAKE
