@@ -11,6 +11,10 @@ $needs_autoconf
 # Likewise for gcc.
 (gcc -v) > /dev/null 2>&1 || exit 77
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 # Likewise for gzip.
 (gzip --version) > /dev/null 2>&1 || exit 77
 
