@@ -32,6 +32,10 @@ $needs_autoconf
 # Likewise for gcc.
 (gcc -v) > /dev/null 2>&1 || exit 77
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 touch README NEWS AUTHORS ChangeLog
 
 mkdir build
