@@ -38,6 +38,10 @@ $needs_autoconf
 # Likewise for gcc.
 (gcc -v) > /dev/null 2>&1 || exit 77
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 # We use gcc and not gcc -traditional as the latter fails on some
 # Linux boxes (Red Hat 5.1 in particular).
 $ACLOCAL \
