@@ -33,6 +33,10 @@ END
 $needs_autoconf
 (gcc -v) > /dev/null 2>&1 || exit 77
 
+# Ignore user CFLAGS.
+CFLAGS=
+export CFLAGS
+
 set -e
 
 $ACLOCAL
