@@ -1,5 +1,13 @@
 2001-08-27  Tom Tromey  <tromey@redhat.com>
 
+	* tests/ansi3.test, tests/ansi5.test, tests/ccnoco.test,
+	tests/cond4.test, tests/cond16.test, tests/cond18.test,
+	tests/cond19.test, tests/depcomp2.test, tests/depend2.test,
+	tests/lex3.test, tests/pr87.test, tests/subobj3.test,
+	tests/substref.test: Clear CFLAGS.
+
+2001-08-27  Tom Tromey  <tromey@redhat.com>
+
 	* automake.texi (Yacc and Lex): Mention lex, not yacc.
 	From Alexey Mahotkin.
 
